# Neotix-Robotics

./: .gitignore  Dockerfile.backend  LICENSE  README.md  SUBMISSION.md  docker-compose.yml  render.yaml  requirements.txt
api/: activity_logger.py  auth.py  config.py  database.py  deps.py  main.py  models.py  storage.py
api/routers/: activity.py  assets.py  auth.py  datasets.py  episodes.py  merge.py  qa.py  simulator.py  stats.py
frontend/: Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  queryClient.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/components/three/: HUDOverlay.tsx  RobotScene.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dropdown.tsx  input.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Activity.tsx  Datasets.tsx  EpisodeDetail.tsx  Episodes.tsx  Landing.tsx  QA.tsx  Simulator.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
models/i2rt_yam/: scene.xml  scene_bimanual.xml  yam.urdf  yam.xml
models/i2rt_yam/assets/: base.stl  link2.stl  link3.stl  tip_left.stl  tip_right.stl
tests/: test_auth.py
tools/: data_loader.py  merge_lerobot_datasets.py  sim_replay.py
